@@ -1,3 +1,13 @@
+2009-03-14  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/DMRaid.h,
+	  include/Makefile.am,
+	  src/DMRaid.cc,
+	  src/Makefile.am: Added new class for dmraid support.
+
+	* README: Added note about requirements for dmraid support.
+	  - added note that xxd command also needed for NTFS support.
+
 2009-03-13  Curtis Gedak  <gedakc@gmail.com>
 
 	* include/Utils.h,
